--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,152 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@300..700&display=swap');
 @import "tailwindcss";
 
-:root{
-    --white:#ffffff;
-    --black:#000000;
+/* Aquí SOLO pones las cosas que Tailwind NO puede hacer */
+:root {
+  --titleFont: "Bebas Neue", sans-serif;
+  --paragraphFont: "Space Grotesk", sans-serif;
 }
-
-/*Desktop Globals*/
-
-body{
-    font-family: "Bebas Neue", sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body {
+  font-family: var(--paragraphFont); /* Grotesk es más legible para el body */
 }
-
-/*Headings and Paragraphs (Desktops)*/
-h1{
-    font-size: 128px;
-    text-transform: uppercase;
+h1, h2, h3, h4, h5, h6, a {
+  font-family: var(--titleFont); /* Bebas para títulos */
 }
-
-h2{
-    font-size: 64px;
-    text-transform: uppercase;
-    font-weight: bold;   
-}
-
-h3{
-    font-size: 48px;
-    text-transform: uppercase;
-    font-weight: bold;   
-}
-
-h4{
-    font-size: 36px;
-    text-transform: uppercase;
-    font-weight: bold;   
-}
-
-h5{
-    font-size: 32px;
-    text-transform: uppercase;
-    font-weight: bold;   
-}
-
-p{
-    font-family: "Space Grotesk", sans-serif;
-    font-size: 16px;
-
-}
-/*Mobile Globals*/
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-    h1{
-        font-size: 36px;
-    }
-
-    h2{
-        font-size: 20px;
-    }
-
-    h3{
-        font-size: 16px;
-    }
-
-    h4{
-        font-size: 12px;
-    }
-
-    h5{
-        font-size: 10px;
-    }
-    p{
-        font-size: 8px;
-    }
-}
-
-/*Buttons*/
-button{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 16px;
-    outline: none;
-    border: none;
-    cursor: pointer;
-
-}
-
-.button-black{
-    color:var(--white);
-    background-color: var(--black);
-    border: #FFFFFF 4px solid;
-    transition: all 0.3s ease-in-out;
-}
-
-.button-black:hover{
-        background-color: var(--white);
-        color: var(--black);
-        border: var(--black) 4px solid; 
-        box-shadow: 4px 4px 0 0 var(--black);
-        transition: all 0.3s ease-in-out;
-}
-
-.button-white{
-    color:var(--black);
-    background-color: var(--white);
-    border: var(--black) 4px solid;
-    transition: all 0.3s ease-in-out;
-}
-
-.button-white:hover{
-        background-color: var(--black);
-        color: var(--white);
-        border: var(--black) 4px solid; 
-        box-shadow: 4px 4px 0 0 var(--black);
-        transition: all 0.3s ease-in-out;
-}
-
-.button-with-logo{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 4px;
-    background-color: var(--black);
-    border: var(--black) 4px solid;
-    color: var(--white);
-    transition: all 0.3s ease-in-out;
-}
-
-.button-with-logo:hover{
-    color:var(--black);
-    background-color: var(--white);
-    border: var(--black) 4px solid;
-    box-shadow: 4px 4px 0 0 var(--black);
-    transition: all 0.3s ease-in-out;
-
-    .button-logo{
-        color: var(--black);
-    }
-
-}
-
-.button-logo{
-    width: 24px;
-    height: 24px;
-    color: var(--white);
-    
+.nameContainer, .badgeContainer{
+    font-family: var(--titleFont);
 }
