refactor: update Header component layout and Button props for improved styling

--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -9,6 +9,6 @@ let link = altLang.toLowerCase();
 ---
 
 
-<div class ="absolute top-4 right-4 flex gap-4">
-    <Button text=`${altLang}` link={`/${link}`} tailwind="w-[52px] h-[52px]"></Button>
+<div class ="header flex justify-end p-4">
+    <Button text=`${altLang}` href={`/${link}`} className="text-xs md:text-base w-8 h-8 md:w-[52px] md:h-[52px]"></Button>
 </div>
