fix: update contact button href to use mailto link

--- a/src/components/sections/Welcome.astro
+++ b/src/components/sections/Welcome.astro
@@ -26,7 +26,7 @@ const {badgeInfo, contact} = i18n;
     </div>
 
     <div class="contactContainer flex flex-wrap gap-4 justify-center items-center mt-4 md:mt-0">
-        <Button text={contact} href=""/>
+        <Button text={contact} href="mailto:naranjosa2004@gmail.com"/>
         <Button text='Github' href='' variant='white'/>
         <Button text='+54 3143109118' href='' variant='white'/>
     </div>
