--- a/src/components/sections/Welcome.astro
+++ b/src/components/sections/Welcome.astro
@@ -1,7 +1,9 @@
 ---
 import Button from '../Button.astro';
+import Icon from '../ui/Icon.astro';
 import { Image } from 'astro:assets';
 import MePhoto from "../../assets/images/me.png";
+import X from "../../assets/xSVG.svg";
 interface Props {
     i18n: {
         badgeInfo: string;
@@ -12,9 +14,35 @@ interface Props {
 const { i18n } = Astro.props;
 const {badgeInfo, contact} = i18n;
 
+const logoStyles ="w-[32px] h-[32px] hover:w-[48px] hover:h-[48px] transition-all duration-300 ease-in-out";
+
+const logoList = [
+    { name: "apple", pos: "md:absolute md:top-[-12%] md:left-[80%]" },
+    { name: "arch", pos: "md:absolute md:top-[0%] md:right-[-10%]" },
+    { name: "spotify", pos: "md:absolute md:top-[-10%] md:left-[95%]" },
+
+    /* 
+    Left top Corner Logo Positions
+    Top Cálculus: (8 * n) starting from 50%
+    Left Side First Column: Left -15%
+    Left Side Second Column: Left-30%
+    */
+    { name: "figma", pos: "md:absolute md:top-[50%] md:left-[-15%]" },
+    { name: "node", pos: "md:absolute md:top-[58%] md:left-[-30%]" },
+    { name: "obsidian", pos: "md:absolute md:top-[66%] md:left-[-15%]" },
+    { name: "markdown", pos: "md:absolute md:top-[74%] md:left-[-30%]" },
+    { name: "react", pos: "md:absolute md:top-[82%] md:left-[-15%]" },
+    { name: "typescript", pos: "md:absolute md:top-[90%] md:left-[-30%]" },
+    { name: "latex", pos: "md:absolute md:top-[98%] md:left-[-15%]" },
+
+    /* Bottom Left Logo Positions */
+    { name: "python", pos: "md:absolute md:top-[105%] md:left-[0%]" },
+    { name: "tailwind", pos: "md:absolute md:top-[110%] md:left-[15%]" },
+    { name: "javascript", pos: "md:absolute md:top-[105%] md:left-[30%]" }
+];
 ---
 
-<section class="welcomeContainer flex md:justify-around flex-col md:flex-row justify-center items-center gap-4 md:gap-16 p-8 md:p-16">
+<section class="welcomeContainer flex md:justify-around flex-col md:flex-row justify-center items-center gap-4 md:gap-16 p-8 md:p-16 md:mb-6">
 <div class="infoContainer flex items-center md:items-start flex-col gap-2.5 py-4 px-2 ">
     <div class="badgeContainer flex border-4 border-black w-fit h-fit py-2 px-6 shadow-[0px_4px_0_0_#000]">
         {badgeInfo}
@@ -25,14 +53,26 @@ const {badgeInfo, contact} = i18n;
         <span class="md:h-[77px]">Herrera</span>
     </div>
 
-    <div class="contactContainer flex flex-wrap gap-4 justify-center items-center mt-4 md:mt-0">
+    <div class="contactContainer flex flex-wrap gap-4 justify-center items-center md:justify-start mt-4 md:mt-0 md:pr-[30px]">
         <Button text={contact} href="mailto:naranjosa2004@gmail.com"/>
         <Button text='Github' href='' variant='white'/>
         <Button text='+54 3143109118' href='' variant='white'/>
     </div>
 </div>
 
-<div class="photoFrame flex justify-center items-center">
-    <Image src={MePhoto} alt="Santiago Naranjo Herrera" width={189} height={247} class="md:h-[396px] md:w-[304px] border-4 border-black object-fit " priority/>
+<div class="photoFrame flex flex-col gap-4 md:flex-row justify-center items-center md:relative">
+    <div>
+        <X class="absolute top-[-10%] left-[-14.5%] w-[89px] h-[89px] max-sm:hidden"/>
+        <Image src={MePhoto} alt="Santiago Naranjo Herrera" width={189} height={247} class="md:h-[396px] md:w-[304px] border-4 border-black object-fit " priority/>
+    </div>
+    <div class="logoContainers flex flex-wrap justify-center gap-3 items-center">
+        
+        {logoList.map(logo =>(
+           <Icon 
+                name={logo.name} 
+                className={`${logoStyles} ${logo.pos}`}
+            />
+        ))}
+    </div>
 </div>
 </section>
