--- a/src/components/sections/Welcome.astro
+++ b/src/components/sections/Welcome.astro
@@ -1,5 +1,5 @@
 ---
-import Button from '../Button.astro';
+import Button from '../ui/Button.astro';
 import Icon from '../ui/Icon.astro';
 import { Image } from 'astro:assets';
 import MePhoto from "../../assets/images/me.png";
