fix: pass projectStrings prop to Projects component for dynamic content rendering

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -18,5 +18,5 @@ let {altLang} = text_en;
   <About title={text_en.about.sectionTitle} content={text_en.about.content} />
   <Experience sectionTitle={text_en.experience.sectionTitle} expStrings={text_en.experience} />
   <Skills sectionTitleLeft={text_en.skills.sectionTitle[0]} sectionTitleRight={text_en.skills.sectionTitle[1]} languages={text_en.languages}/>
-  <Projects sectionTitle={text_en.projects.sectionTitle} />
+  <Projects sectionTitle={text_en.projects.sectionTitle} projectStrings={text_en.projects}/>
 </Layout>
