feat: add Footer component with dynamic subtitle and contact information

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -9,6 +9,7 @@ import Experience from "../../components/sections/Experience.astro";
 import Projects from "../../components/sections/Projects.astro";
 import Skills from "../../components/sections/Skills.astro";
 import Education from "../../components/sections/Education.astro";
+import Footer from "../../components/sections/Footer.astro";
 
 let {altLang} = text_en;
 ---
@@ -21,4 +22,6 @@ let {altLang} = text_en;
   <Skills sectionTitleLeft={text_en.skills.sectionTitle[0]} sectionTitleRight={text_en.skills.sectionTitle[1]} languages={text_en.languages}/>
   <Projects sectionTitle={text_en.projects.sectionTitle} projectStrings={text_en.projects}/>
   <Education sectionTitle={text_en.education.sectionTitle} eduStrings={text_en.education}/>
+  <Footer subtitle={text_en.footer.subtitle}/>
 </Layout>
+
