--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -1,12 +1,28 @@
 ---
+import "../../styles/global.css";
+import ClientRouter from "astro/components/ClientRouter.astro";
 import Layout from "../../layouts/Layout.astro";
 import Header from "../../components/sections/Header.astro";
-import "../../styles/global.css";
+import Welcome from "../../components/sections/Welcome.astro";
+import About from "../../components/sections/About.astro";
 import text_es from "../../i18n/es.json"
+import Experience from "../../components/sections/Experience.astro";
+import Projects from "../../components/sections/Projects.astro";
+import Skills from "../../components/sections/Skills.astro";
+import Education from "../../components/sections/Education.astro";
+import Footer from "../../components/sections/Footer.astro";
 
 let {altLang} = text_es;
 ---
 
 <Layout>
   <Header altLang=`${altLang}`/>
+  <Welcome i18n = {text_es.welcome}/>
+  <About title={text_es.about.sectionTitle} content={text_es.about.content} />
+  <Experience sectionTitle={text_es.experience.sectionTitle} expStrings={text_es.experience} />
+  <Skills sectionTitleLeft={text_es.skills.sectionTitle[0]} sectionTitleRight={text_es.skills.sectionTitle[1]} languages={text_es.languages}/>
+  <Projects sectionTitle={text_es.projects.sectionTitle} projectStrings={text_es.projects}/>
+  <Education sectionTitle={text_es.education.sectionTitle} eduStrings={text_es.education}/>
+  <Footer subtitle={text_es.footer.subtitle}/>
 </Layout>
+<ClientRouter />
