--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,4 +1,5 @@
 ---
+import { ClientRouter } from "astro:transitions";
 import "../../styles/global.css";
 import Layout from "../../layouts/Layout.astro";
 import Header from "../../components/sections/Header.astro";
@@ -24,4 +25,5 @@ let {altLang} = text_en;
   <Education sectionTitle={text_en.education.sectionTitle} eduStrings={text_en.education}/>
   <Footer subtitle={text_en.footer.subtitle}/>
 </Layout>
+<ClientRouter />
 
