Add Missing Links

--- a/src/components/sections/Welcome.astro
+++ b/src/components/sections/Welcome.astro
@@ -56,7 +56,7 @@ const logoList = [
     <div class="contactContainer flex flex-wrap gap-4 justify-center items-center md:justify-start mt-4 md:mt-0 md:pr-[30px]">
         <Button text={contact} href="mailto:naranjosa2004@gmail.com"/>
         <Button text='Github' href='https://github.com/TatoNaranjo' variant='white'/>
-        <Button text='+54 3143109118' href='' variant='white'/>
+        <Button text='+54 3143109118' href='https://wa.me/3143109118' variant='white'/>
     </div>
 </div>
 
