Add Meta Description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
+		<meta 
+  name="description" 
+  content="El portafolio de desarrollo de TatoNaranjo, mostrando proyectos con React, Astro y más."/>
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>TatoNaranjo</title>
