Fix Object Cover

--- a/src/components/sections/Welcome.astro
+++ b/src/components/sections/Welcome.astro
@@ -63,7 +63,7 @@ const logoList = [
 <div class="photoFrame flex flex-col gap-4 md:flex-row justify-center items-center md:relative">
     <div>
         <X class="absolute top-[-10%] left-[-14.5%] w-[89px] h-[89px] max-sm:hidden"/>
-        <Image src={MePhoto} alt="Santiago Naranjo Herrera" width={304} height={396} class="md:h-[396px] md:w-[304px] border-4 border-black object-fit " priority/>
+        <Image src={MePhoto} alt="Santiago Naranjo Herrera" width={304} height={396} class="md:h-[396px] md:w-[304px] border-4 border-black object-cover " priority/>
     </div>
     <div class="logoContainers flex flex-wrap justify-center gap-3 items-center">
         
