feat: update welcome image format

--- a/src/components/sections/Welcome.astro
+++ b/src/components/sections/Welcome.astro
@@ -2,7 +2,7 @@
 import Button from '../ui/Button.astro';
 import Icon from '../ui/Icon.astro';
 import { Image } from 'astro:assets';
-import MePhoto from "../../assets/images/me.jpg";
+import MePhoto from "../../assets/images/me.webp";
 import X from "../../assets/xSVG.svg";
 interface Props {
     i18n: {
